2006-06-13  Nurdin Premji  <npremji@redhat.com>

	* TestOffspringObserver.java (testCloneThenFork): Added
	(testForkThenClone): Added
	(tasksAddedCounter): Added back in counters for two layers of testing :)
	(testCloneThenFork): Fixed problem with random failures. Error was that
	TaskSet.toArray does not guarantee the order of the tasks is the order they
	came in.
	(testForkThenClone): Fixed ^

2006-06-12  Adam Jocksch  <ajocksch@redhat.com>

	* Proc.java (getMainTask): Added.
	* Task.java (getDwflLineXXX): Now uses getIsa instead of isa.

2006-06-12  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java (AckProcess): Add methods .addClone(int), and
	.addFork(int).

2006-06-11  Sami Wagiaalla  <swagiaal@redhat.com>

	* TaskState.java: Added syscall tracing mode:
	Added syscall equivilients to all running classes, which can added syscallObservers
	and added trasitions from non syscall states to syscall states. So far
	only tested transtions are implemented. Missing is transtion during running
	state and all transtions back to non syscall mode.
	Added blockedInExecSyscall state to handle transition to /syscallBlockedInExecSyscall/
	state (fix for ending up in the wrong state by missing the sycall entry notification). 
	Added syscallBlockedInExecSyscall to handle execEvent during runningInSyscall ( fix
	for bug reported by Yao.)
	* TaskSyscallObservation.java: new class. Handles addition/removal of
	SyscallObservers.
	* TestI386Modify.java: Removed task.traceSyscall = true. It is no longer needed
	and test still passes :).
	* TestI386Regs.java: Ditto.
	* TaskObservation.java: Changed the task reference from private to protected
	so that specialized children of TaskObservation can see it.
	* Task.java: Removed traceSyscall flag.
	Added handle(Add/Delete)SyscallObserver which take care of special handling
	need for SyscallObservers.
	Added abstract methods sendSyscallContinue,startTracingSyscalls, and 
	stopTracingSyscalls.